--- a/frontend/consumer-dioxus/index.html
+++ b/frontend/consumer-dioxus/index.html
@@ -8,5 +8,9 @@
     </head>
     <body class="antialiased min-h-full flex flex-col">
         <div id="main"></div>
+
+        <!-- Firebase SDK -->
+        <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics-compat.js"></script>
     </body>
 </html>
