Optimize scroll tracking and formatting
Replace Signal with Cell in scroll hook to prevent frequent re-renders.
Move Firebase initialization script to public folder and load via HTML.
Run cargo fmt and import sorting across frontend crates.

--- a/frontend/consumer-dioxus/index.html
+++ b/frontend/consumer-dioxus/index.html
@@ -5,12 +5,12 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="UTF-8" />
+
+        <!-- Firebase SDK - Load before app -->
+        <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics-compat.js"></script>
     </head>
     <body class="antialiased min-h-full flex flex-col">
         <div id="main"></div>
-
-        <!-- Firebase SDK -->
-        <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics-compat.js"></script>
     </body>
 </html>
